--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react": "~15.3.2",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
     "react-native-animatable": "^1.0.0",
+    "react-native-easy-toast": "git+https://github.com/djock/react-native-easy-toast",
     "react-native-swipe-cards": "git+https://github.com/djock/react-native-tinder-swipe-cards"
   },
   "devDependencies": {
