--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ReQuote",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Quotes browser application made in React Native + ExponentJS!",
   "author": "Ionut Mocanu",
   "license": "MIT",
@@ -26,7 +26,9 @@
     "react": "~15.3.2",
     "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
     "react-native-animatable": "^1.0.0",
+    "react-native-checkbox": "git+https://github.com/Jaafar-abusair/react-native-checkbox",
     "react-native-easy-toast": "git+https://github.com/djock/react-native-easy-toast",
+    "react-native-material-kit": "^0.3.3",
     "react-native-swipe-cards": "git+https://github.com/djock/react-native-tinder-swipe-cards"
   },
   "devDependencies": {
