--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "react-native-easy-toast": "git+https://github.com/djock/react-native-easy-toast",
     "react-native-linear-gradient": "^1.5.15",
     "react-native-material-kit": "^0.3.3",
-    "react-native-swipe-cards": "git+https://github.com/djock/react-native-tinder-swipe-cards/tree/dev"
+    "react-native-swipe-cards": "git+https://github.com/djock/react-native-tinder-swipe-cards",
+    "react-native-swipeout": "^2.0.12"
   },
   "devDependencies": {
     "jest-exponent": "~0.1.3"
