--- a/package.json
+++ b/package.json
@@ -19,16 +19,17 @@
     "preset": "jest-exponent"
   },
   "dependencies": {
-    "@exponent/ex-navigation": "~2.0.0",
+    "@exponent/ex-navigation": "~2.9.1",
     "@exponent/samples": "~1.0.2",
     "@exponent/vector-icons": "~2.0.3",
-    "exponent": "~11.0.2",
-    "react": "~15.3.2",
-    "react-native": "git+https://github.com/exponentjs/react-native#sdk-11.0.3",
+    "exponent": "^14.0.0",
+    "react": "~15.4.0",
+    "react-native": "https://github.com/exponent/react-native/archive/sdk-14.0.0.tar.gz",
     "react-native-animatable": "^1.0.0",
     "react-native-check-box": "^1.0.2",
     "react-native-checkbox": "git+https://github.com/Jaafar-abusair/react-native-checkbox",
     "react-native-checkbox-field": "^1.1.1",
+    "react-native-device-info": "^0.9.9",
     "react-native-easy-toast": "git+https://github.com/djock/react-native-easy-toast",
     "react-native-linear-gradient": "^1.5.15",
     "react-native-material-kit": "^0.3.3",
